--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-server.port=8080
+server.port=4004
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.username=postgres
+spring.datasource.username=rc
 spring.datasource.password=root123
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.servlet.multipart.enabled=true
