--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-request-size=10MB
 spring.servlet.multipart.max-file-size=10MB
 spring.data.rest.base-path=/v1/api
-spring.datasource.url=jdbc:postgresql://localhost:5432/grant_atlas
+spring.datasource.url=jdbc:postgresql://localhost:5432/grand_atlas
 spring.jpa.show-sql=true
 spring.sql.init.mode=never
 spring.mail.host=smtp.gmail.com
